--- a/users/templates/users/profile2.html
+++ b/users/templates/users/profile2.html
@@ -45,7 +45,7 @@
             font-family: Arial, sans-serif;
             padding: 20px;
             background-color: var(--bg-color);
-            color: var(--text-color);
+            color: var(--footer-text-color);
             display: flex; /* Enable flexbox layout */
             flex-direction: column; /* Stack elements vertically */
             align-items: center; 
@@ -54,6 +54,7 @@
         /* Navbar styling */
         .navbar {
             background-color: var(--footer-bg-color);
+            
             width: 95%;
             position: fixed;
             padding: 15px;
