--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -159,6 +159,7 @@
             <li><a href="#">Year in Review</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="#">Profile</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
             <li><button class="toggle-btn" onclick="toggleMode()">Light Mode</button></li>
         </ul>
