--- a/users/templates/registered/dashboard.html
+++ b/users/templates/registered/dashboard.html
@@ -219,6 +219,7 @@
             <li><a href="#">Year in Review</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
             <li><button class="toggle-btn" onclick="toggleMode()">Light Mode</button></li>
         </ul>
