--- a/users/templates/users/contact.html
+++ b/users/templates/users/contact.html
@@ -237,6 +237,7 @@
                     <li><a href="{% url 'games' %}?game=2">Guess Artist</a>
                 </ul>
             </li>
+            <li><a href="{% url 'analysis' %}">LLM Analysis</a></li>
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
