--- a/users/templates/users/games.html
+++ b/users/templates/users/games.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -153,46 +154,46 @@
     <nav class="navbar">
         <div class="navbar-brand">SpotifyWrapper</div>
         <ul class="navbar-links">
-            <li><a href="{% url 'dashboard' %}">Home</a></li>
+            <li><a href="{% url 'dashboard' %}">{% trans 'Home' %}</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-trigger">Games</a>
+                <a href="#" class="dropdown-trigger">{% trans 'Games' %}</a>
                 <ul class="dropdown-menu">
-                    <li>{% if game_type == 'Guess Top Track' %} <a href="#">Guess Top Track</a>
-                        {% else %} <a href="{% url 'games' %}?game=0">Guess Top Track</a>
+                    <li>{% if game_type == 'Guess Top Track' %} <a href="#">{% trans 'Guess Top Track' %}</a>
+                        {% else %} <a href="{% url 'games' %}?game=0">{% trans 'Guess Top Track' %}</a>
                         {% endif %}
                     </li>
-                    <li>{% if game_type == 'Guess Top Album' %} <a href="#">Guess Top Album</a>
-                        {% else %} <a href="{% url 'games' %}?game=1">Guess Top Album</a>
+                    <li>{% if game_type == 'Guess Top Album' %} <a href="#">{% trans 'Guess Top Album' %}</a>
+                        {% else %} <a href="{% url 'games' %}?game=1">{% trans 'Guess Top Album' %}</a>
                         {% endif %}
                     </li>
-                    <li>{% if game_type == 'Guess Artist' %} <a href="#">Guess Artist</a>
-                        {% else %} <a href="{% url 'games' %}?game=2">Guess Artist</a>
+                    <li>{% if game_type == 'Guess Artist' %} <a href="#">{% trans 'Guess Artist' %}</a>
+                        {% else %} <a href="{% url 'games' %}?game=2">{% trans 'Guess Artist' %}</a>
                         {% endif %}
                     </li>
                 </ul>
             </li>
-            <li><a href="{% url 'profile' %}">Profile</a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'profile' %}">{% trans 'Profile' %}</a></li>
+            <li><a href="{% url 'contact' %}">{% trans 'Contact' %}</a></li>
+            <li><a href="{% url 'logout' %}">{% trans 'Logout' %}</a></li>
         </ul>
     </nav>
     <div class="container">
-        <h1>Selected Game: {{ game_type }}</h1>
+        <h1>{% trans 'Selected Game:' %} {{ game_type }}</h1>
         
         <div class="guess-box">
             <h2>
                 {% if game_type == 'Guess Top Track' %}
-                    Can you guess your #1 most played track?
+                    {% trans 'Can you guess your #1 most played track?' %}
                 {% elif game_type == 'Guess Top Album' %}
-                    Can you guess your #1 most played album?
+                    {% trans 'Can you guess your #1 most played album?' %}
                 {% else %}
-                    Can you guess your #1 most played artist?
+                    {% trans 'Can you guess your #1 most played artist?' %}
                 {% endif %}
             </h2>
 
             <div class="input-group">
-                <input type="text" id="guessInput" placeholder="Enter your guess...">
-                <button class="btn-guess" id="submitGuess">Make a Guess</button>
+                <input type="text" id="guessInput" placeholder="{% trans 'Enter your guess' %}...">
+                <button class="btn-guess" id="submitGuess">{% trans 'Make a Guess' %}</button>
             </div>
             
             <div id="feedbackMessage" class="feedback"></div>
